# Kinglet

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  COLD_START_OPTIMIZATION.md  PUBLISH.md  README.md  STATUS.md  benchmark_coldstart.py  codecov.yml  kinglet.py  package.json  pyproject.toml  pytest.ini  sonar-project.properties  test_improvement.md  upload.py
.github/: CODEOWNERS
CloudFlare-Demo/: README.md  pyproject.toml  wrangler.toml
docs/: BINARY_UPLOADS.md  CACHING.md  D1-Mock-Uplift-Summary.md  MIDDLEWARE.md  MockD1Database-Comprehensive-SQL-Support.md  ORM.md  SECURITY_BEST_PRACTICES.md  TOTP.md
examples/: README.md  authz_example.py  basic_api.py  caching_example.py  d1_cache_example.py  d1_r2_helpers_example.py  decorators_example.py  experience_api_example.py  middleware_example.py  mock_d1_comprehensive_example.py  mock_email_sender_example.py  orm_d1_cost_optimization.py  orm_error_handling_example.py  r2_media_example.py  secure_admin_example.py  ses_email_example.py  totp_example.py
examples/orm_integration_test/: README.md  deploy.sh  pyproject.toml  worker.py  wrangler.toml
examples/totp_workers_demo/: README.md  pyproject.toml  worker.py  wrangler.toml
kinglet/: __init__.py  authz.py  cache_d1.py  cache_d1.sql  constants.py  core.py  decorators.py  fields.py  http.py  kinglet.py  middleware.py  openapi.py  orm.py  orm_deploy.py  orm_errors.py  orm_migrations.py  pagination.py  serializers.py  services.py  ses.py  sql.py  storage.py  testing.py  totp.py  utils.py  validation.py  workers.py
kinglet-pft/: pyproject.toml  wrangler.toml
(+80 files in other folders)
