[project]
name = "kinglet-totp-workers-demo"
version = "0.1.0"
description = "Workers deployment demo for Kinglet auth and TOTP"
requires-python = ">=3.12"
dependencies = [
    "kinglet @ file:///Users/mitchellcurrie/Projects/Kinglet",
]

[dependency-groups]
dev = [
    "workers-py",
]

[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"
